[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "jpm-project"
version = "0.1.0"
description = "JPM project"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "YE Chang", email = "chang.ye@my.cityu.edu.hk" } ]
dependencies = []

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/Yechang618/jpm-project"

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"pytest-cov",
	"mypy",
	"black",
	"isort",
	"flake8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --strict-markers"
testpaths = ["test"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

